[gd_scene load_steps=14 format=3 uid="uid://tnmauhs4oxc6"]

[ext_resource type="Texture2D" uid="uid://ba6cv20yqio3m" path="res://raw_assets/enemies/octo/octo_0.png" id="1_lr7bp"]
[ext_resource type="Texture2D" uid="uid://cdo1rfxn7x47c" path="res://raw_assets/enemies/octo/octo_1.png" id="2_15ksy"]
[ext_resource type="Script" path="res://world_loader/enemies/enemy_health.gd" id="2_kkp7y"]
[ext_resource type="PackedScene" uid="uid://cayf47pm8vmxd" path="res://world_loader/enemies/spike.tscn" id="3_6r727"]
[ext_resource type="PackedScene" uid="uid://kfo6qktvvv65" path="res://world_loader/enemies/drops/heart.tscn" id="3_ps614"]
[ext_resource type="Script" path="res://world_loader/enemies/octo/octo_movement.gd" id="4_u40ge"]
[ext_resource type="PackedScene" uid="uid://dlmrxk1ghikip" path="res://world_loader/interactables/simple_drop.tscn" id="6_h151m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_17rsw"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lr7bp")
}, {
"duration": 1.0,
"texture": ExtResource("2_15ksy")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg3l8"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hawlc"]
size = Vector2(10, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6bv4"]
size = Vector2(10, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7a6ea"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycfkd"]
size = Vector2(4, 7)

[node name="octo" type="Node2D"]

[node name="octo_anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_17rsw")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.528681

[node name="health and damage" type="Node2D" parent="."]
visible = false

[node name="simple_drop" parent="health and damage" node_paths=PackedStringArray("pos_target") instance=ExtResource("6_h151m")]
drop_thing = ExtResource("3_ps614")
pos_target = NodePath("../..")

[node name="spike" parent="health and damage" instance=ExtResource("3_6r727")]

[node name="health" type="Node2D" parent="health and damage" node_paths=PackedStringArray("die_node", "hurt_timer")]
script = ExtResource("2_kkp7y")
die_node = NodePath("../..")
hurt_timer = NodePath("../hurt_timer")

[node name="hitbox" type="Area2D" parent="health and damage"]
collision_layer = 4
collision_mask = 256

[node name="octo_hitbox" type="CollisionShape2D" parent="health and damage/hitbox"]
shape = SubResource("RectangleShape2D_yg3l8")

[node name="hurt_timer" type="Timer" parent="health and damage"]
wait_time = 0.45
one_shot = true

[node name="move" type="Node2D" parent="."]
visible = false

[node name="movement" type="Node2D" parent="move" node_paths=PackedStringArray("enemy_node", "wall_areas", "move_timer", "stun_timer", "octo_anim")]
script = ExtResource("4_u40ge")
enemy_node = NodePath("../..")
vel = 1
wall_areas = [null, null, null, null]
move_timer = NodePath("../move_timer")
stun_timer = NodePath("../stun_timer")
octo_anim = NodePath("../../octo_anim")
kbvel = 2

[node name="move_timer" type="Timer" parent="move"]

[node name="wall_areas" type="Node2D" parent="move"]

[node name="top" type="Area2D" parent="move/wall_areas"]
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 34

[node name="top_shape" type="CollisionShape2D" parent="move/wall_areas/top"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_hawlc")

[node name="bottom" type="Area2D" parent="move/wall_areas"]
position = Vector2(0, 5)
collision_layer = 0
collision_mask = 34

[node name="bottom_shape" type="CollisionShape2D" parent="move/wall_areas/bottom"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_o6bv4")

[node name="left" type="Area2D" parent="move/wall_areas"]
position = Vector2(-6, 0)
collision_layer = 0
collision_mask = 34

[node name="left_shape" type="CollisionShape2D" parent="move/wall_areas/left"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_7a6ea")

[node name="right" type="Area2D" parent="move/wall_areas"]
position = Vector2(6, 0)
collision_layer = 0
collision_mask = 34

[node name="right_shape" type="CollisionShape2D" parent="move/wall_areas/right"]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_ycfkd")

[node name="stun_timer" type="Timer" parent="move"]
wait_time = 3.0
one_shot = true

[connection signal="death" from="health and damage/health" to="health and damage/simple_drop" method="_on_health_death"]
[connection signal="hurt" from="health and damage/health" to="move/movement" method="_on_health_hurt"]
[connection signal="area_entered" from="health and damage/hitbox" to="move/movement" method="_on_hitbox_area_entered"]
[connection signal="timeout" from="health and damage/hurt_timer" to="move/movement" method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="move/move_timer" to="move/movement" method="_on_move_timer_timeout"]
[connection signal="area_entered" from="move/wall_areas/top" to="move/movement" method="_on_top_area_entered"]
[connection signal="body_entered" from="move/wall_areas/top" to="move/movement" method="_on_top_body_entered"]
[connection signal="area_entered" from="move/wall_areas/bottom" to="move/movement" method="_on_bottom_area_entered"]
[connection signal="body_entered" from="move/wall_areas/bottom" to="move/movement" method="_on_bottom_body_entered"]
[connection signal="area_entered" from="move/wall_areas/left" to="move/movement" method="_on_left_area_entered"]
[connection signal="body_entered" from="move/wall_areas/left" to="move/movement" method="_on_left_body_entered"]
[connection signal="area_entered" from="move/wall_areas/right" to="move/movement" method="_on_right_area_entered"]
[connection signal="body_entered" from="move/wall_areas/right" to="move/movement" method="_on_right_body_entered"]
